favicon added and overflow fixed for mobile skills' section

--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -61,6 +61,10 @@
 }
 
 @media (max-width: 700px) {
+  .lp {
+    overflow: hidden;
+  }
+
   #skills {
     padding-top: 7.3rem;
     padding-bottom: 1rem;
@@ -76,7 +80,6 @@
     }
   }
   .skills__logos {
-    overflow-x: hidden;
     margin-top: -2.5rem;
     width: 100%;
     min-height: 600px;
